<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!-- The main content view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/toolbar_default" />
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/fl_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lldrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/side_nav_bar"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/baner"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal" />
        </LinearLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:scrollIndicators="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/ivHome"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:foregroundTint="@color/white_color"
                        android:gravity="center"
                        android:src="@drawable/home"
                        android:tintMode="multiply"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tvHome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:paddingTop="5dp"
                        android:text="@string/home"
                        android:textColor="@color/white_color"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_livetv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/ivLive"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/white_color"
                        android:foregroundTint="@color/white_color"
                        android:src="@drawable/livetv"
                        android:tint="@color/white_color"
                        android:tintMode="multiply"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tvLive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:paddingTop="5dp"
                        android:text="@string/live_tv"
                        android:textColor="@color/white_color"
                        android:textSize="14dp"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/ivCat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:foregroundTint="@color/white_color"
                        android:src="@drawable/category_icon"
                        android:tintMode="multiply"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tvCat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:paddingTop="5dp"
                        android:text="@string/categories"
                        android:textColor="@color/white_color"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_navigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/ivContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:foregroundTint="@color/white_color"
                        android:src="@drawable/contact_icon"
                        android:tintMode="multiply"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tvContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:paddingTop="5dp"
                        android:text="@string/contact_us"
                        android:textColor="@color/white_color"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/ivSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:foregroundTint="@color/white_color"
                        android:src="@drawable/ic_settings_black_24dp"
                        android:tintMode="multiply"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tvSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:paddingTop="5dp"
                        android:text="@string/settings"
                        android:textColor="@color/white_color"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/ivShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:foregroundTint="@color/white_color"
                        android:src="@drawable/ic_share_black_24dp"
                        android:tintMode="multiply"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tvShare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:paddingTop="5dp"
                        android:text="@string/share"
                        android:textColor="@color/white_color"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/ivRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:foregroundTint="@color/white_color"
                        android:src="@drawable/ic_star_half_black_24dp"
                        android:tintMode="multiply"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tvRate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:paddingTop="5dp"
                        android:text="@string/rating"
                        android:textColor="@color/white_color"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_faq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:foregroundTint="@color/white_color"
                        android:src="@drawable/faq_icon"
                        android:tintMode="multiply"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:paddingTop="5dp"
                        android:text="@string/faq"
                        android:textColor="@color/white_color"
                        android:textSize="14dp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
